@@ -52,6 +52,7 @@ Changes in 2.8
 - Save enrollment in Student.php & SaveEnrollment.fnc.php
 - prevent student ID hacking in Transcripts.php
 - prevent course period ID hacking in PrintClassLists.php & PrintClassPictures.php
+- prevent referral ID hacking in Referrals.php
 
 Upgrade from 2.7.x
 ------------------
